Store the filter id instead of the filter object

Prevent possible crashes by just storing the filter id
and not the filter objects itself which might become invalidated.

BUG: 282371